--- a/package.json
+++ b/package.json
@@ -58,28 +58,28 @@
 	"devDependencies": {
 		"@commitlint/cli": "^11.0.0",
 		"@commitlint/config-conventional": "^11.0.0",
+		"@mdn/browser-compat-data": "^2.0.3",
 		"@types/browserslist": "^4.8.0",
 		"@types/jest": "^26.0.14",
-		"@typescript-eslint/eslint-plugin": "^4.1.1",
-		"@typescript-eslint/parser": "^4.1.1",
-		"@wessberg/rollup-plugin-ts": "^1.3.4",
-		"browserslist": "^4.14.3",
+		"@typescript-eslint/eslint-plugin": "^4.4.1",
+		"@typescript-eslint/parser": "^4.4.1",
+		"@wessberg/rollup-plugin-ts": "^1.3.5",
+		"browserslist": "^4.14.5",
 		"commitizen": "^4.2.1",
 		"compare-versions": "^3.6.0",
 		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^7.9.0",
-		"eslint-config-prettier": "^6.11.0",
+		"eslint": "^7.11.0",
+		"eslint-config-prettier": "^6.13.0",
 		"eslint-plugin-simple-import-sort": "^5.0.3",
 		"husky": "^4.3.0",
-		"jest": "^26.4.2",
-		"lint-staged": "^10.4.0",
-		"mdn-browser-compat-data": "^1.0.38",
+		"jest": "^26.5.3",
+		"lint-staged": "^10.4.2",
 		"mdn-data": "^2.0.11",
 		"prettier": "^2.1.2",
-		"rollup": "^2.27.1",
+		"rollup": "^2.32.0",
 		"rollup-plugin-terser": "^7.0.2",
 		"standard-version": "^9.0.0",
-		"ts-jest": "^26.3.0",
-		"typescript": "^4.0.2"
+		"ts-jest": "^26.4.1",
+		"typescript": "^4.0.3"
 	}
 }
