fix: minor regexp tweaks

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/recommended",
+		"plugin:regexp/recommended",
 		"prettier",
 		"prettier/prettier"
 	],
