--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-regexp": "^1.0.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"husky": "^7.0.1",
 		"jest": "^27.0.6",
