--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
 	],
 	"scripts": {
 		"build": "rollup --config --sourcemap",
-		"clean": "git clean -fdx -e node_modules",
+		"clean": "git clean --interactive -dx --exclude node_modules/ --exclude .husky/",
 		"commit": "git-cz",
-		"format": "prettier --ignore-path .gitignore --write .",
-		"lint": "eslint --ignore-path .gitignore --ext .ts,.js .",
+		"fix": "run-s fix:*",
+		"fix:eslint": "npm run lint:eslint -- --fix",
+		"fix:prettier": "npm run lint:prettier -- --write",
+		"lint": "run-p lint:*",
+		"lint:eslint": "eslint --ext .ts,.tsx,.js,.jsx --ignore-path .gitignore .",
+		"lint:prettier": "prettier --check --ignore-path .gitignore .",
+		"lint:typescript": "tsc --noEmit",
 		"prepare": "husky install",
 		"release": "standard-version",
 		"test": "jest"
@@ -71,6 +76,7 @@
 		"jest": "^27.0.6",
 		"lint-staged": "^11.1.2",
 		"mdn-data": "^2.0.20",
+		"npm-run-all": "^4.1.5",
 		"prettier": "^2.3.2",
 		"rollup": "^2.56.2",
 		"rollup-plugin-terser": "^7.0.2",
