chore(deps): update

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"src/"
 	],
 	"scripts": {
-		"build": "rollup --config --sourcemap",
+		"build": "rollup --config --configPlugin rollup-plugin-ts --sourcemap",
 		"clean": "git clean --interactive -dx --exclude node_modules/ --exclude .husky/",
 		"commit": "git-cz",
 		"fix": "run-s fix:*",
@@ -56,32 +56,31 @@
 		}
 	},
 	"devDependencies": {
-		"@commitlint/cli": "^13.1.0",
-		"@commitlint/config-conventional": "^13.1.0",
-		"@mdn/browser-compat-data": "^3.3.14",
-		"@types/browserslist": "^4.8.0",
-		"@types/jest": "^27.0.1",
-		"@typescript-eslint/eslint-plugin": "^4.29.1",
-		"@typescript-eslint/parser": "^4.29.1",
-		"@wessberg/rollup-plugin-ts": "^1.3.5",
-		"browserslist": "^4.16.7",
+		"@commitlint/cli": "^17.0.3",
+		"@commitlint/config-conventional": "^17.0.3",
+		"@mdn/browser-compat-data": "^5.1.2",
+		"@types/jest": "^28.1.3",
+		"@typescript-eslint/eslint-plugin": "^5.29.0",
+		"@typescript-eslint/parser": "^5.29.0",
+		"browserslist": "^4.21.0",
 		"commitizen": "^4.2.4",
-		"compare-versions": "^3.6.0",
+		"compare-versions": "^4.1.3",
 		"cz-conventional-changelog": "^3.3.0",
-		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-regexp": "^1.0.0",
+		"eslint": "^8.18.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-regexp": "^1.7.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
-		"husky": "^7.0.1",
-		"jest": "^27.0.6",
-		"lint-staged": "^11.1.2",
-		"mdn-data": "^2.0.20",
+		"husky": "^8.0.1",
+		"jest": "^28.1.1",
+		"lint-staged": "^13.0.3",
+		"mdn-data": "^2.0.27",
 		"npm-run-all": "^4.1.5",
-		"prettier": "^2.3.2",
-		"rollup": "^2.56.2",
+		"prettier": "^2.7.1",
+		"rollup": "^2.75.7",
 		"rollup-plugin-terser": "^7.0.2",
-		"standard-version": "^9.3.1",
-		"ts-jest": "^27.0.4",
-		"typescript": "^4.3.5"
+		"rollup-plugin-ts": "^3.0.2",
+		"standard-version": "^9.5.0",
+		"ts-jest": "^28.0.5",
+		"typescript": "^4.7.4"
 	}
 }
