--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
 		"forceConsistentCasingInFileNames": true,
 		"importsNotUsedAsValues": "error",
 		"target": "ES5",
-		"moduleResolution": "Node",
+		"module": "ESNext",
+		"moduleResolution": "NodeNext",
 		"esModuleInterop": true,
 		"downlevelIteration": true,
 		"declaration": true,
