--- a/package.json
+++ b/package.json
@@ -46,10 +46,6 @@
 			"@commitlint/config-conventional"
 		]
 	},
-	"lint-staged": {
-		"*.{ts,js,json,yml,md}": "prettier --write",
-		"*.{ts,js}": "eslint --fix"
-	},
 	"config": {
 		"commitizen": {
 			"path": "cz-conventional-changelog"
@@ -72,8 +68,8 @@
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"husky": "^8.0.1",
 		"jest": "^28.1.1",
-		"lint-staged": "^13.0.3",
 		"mdn-data": "^2.0.27",
+		"nano-staged": "^0.8.0",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.7.1",
 		"rollup": "^2.75.7",
@@ -82,5 +78,9 @@
 		"standard-version": "^9.5.0",
 		"ts-jest": "^28.0.5",
 		"typescript": "^4.7.4"
+	},
+	"nano-staged": {
+		"*": "prettier --write --ignore-unknown",
+		"*.{ts,js}": "eslint --fix"
 	}
 }
