--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"@commitlint/cli": "^17.0.3",
 		"@commitlint/config-conventional": "^17.0.3",
 		"@mdn/browser-compat-data": "^5.1.2",
+		"@tsconfig/strictest": "^1.0.1",
 		"@types/jest": "^28.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.29.0",
 		"@typescript-eslint/parser": "^5.29.0",
