ci: fix auto-deployment on tag

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version-file: .nvmrc
+          registry-url: https://registry.npmjs.org
       - run: npm ci --ignore-scripts
       - run: npm run build
       - run: npm run lint
