fix: reduce bundle size caused by wrong tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"target": "ES5",
 		"module": "ESNext",
 		"moduleResolution": "NodeNext",
-		"isolatedModules": true,
+		"isolatedModules": false,
 		"downlevelIteration": true,
 		"declaration": true,
 		"declarationMap": true,
